k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anjouexplore
  labels:
    name: anjouexplore
    app.kubernetes.io/name: anjouexplore
    app.kubernetes.io/component: namespace
